# awkward-datasets

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/awkward_datasets/: __init__.py  _version.py  json.py  parquet.py
src/awkward_datasets/data/parquet/: higgs.000.parquet  higgs.001.parquet  higgs.002.parquet  higgs.003.parquet  higgs.004.parquet
src/awkward_datasets/data/simple/: single_record.json
