[metadata]
name = awkward-datasets
author = Doug Davis
author_email = ddavis@ddavis.io
maintainer = Doug Davis
maintainer_email = ddavis@ddavis.io
description = Awkward style datasets
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-clause
platforms =
    Any
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[flake8]
exclude = __init__.py
ignore = E501,W503
